fixed body-content spacing

--- a/ClientApp/app/components/app/app.component.css
+++ b/ClientApp/app/components/app/app.component.css
@@ -9,8 +9,9 @@
 }
 
 .container-fluid-0 {
-    width: 100%;
     margin-right: auto;
     margin-left: auto;
+    padding-right: 15px;
+    padding-left: 0px;
     width: 100%;
 }
