--- a/ClientApp/app/components/side-bar/side-bar.component.css
+++ b/ClientApp/app/components/side-bar/side-bar.component.css
@@ -39,9 +39,3 @@ li.link-active a:focus {
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
-@media (max-width: 767px) {
-    .side-nav {
-        display: none;
-    }
-}
